--- a/css/cards.css
+++ b/css/cards.css
@@ -135,3 +135,16 @@
         opacity: 0;
     }
 }
+
+/* Remove selection from elements.
+ * see https://stackoverflow.com/a/9314458
+ */
+.noselect, .card, .card .content, .card img {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
