--- a/css/settings.css
+++ b/css/settings.css
@@ -36,10 +36,12 @@ img.soundOn, .soundOff img.soundOff {
     font-size: 3em;
     padding-bottom: 0.5em;
     padding-top: 0.5em;
-    border-bottom-width: 0.3em;
-    border-bottom-color: #dddddd;
-    border-bottom-style: solid;
-    width: 100%;
+    border-width: 0.2em;
+    border-color: #dddddd;
+    border-style: solid;
+    border-radius: 0.5em;
+    margin: 0.5em;
+    padding: 0.5em;
 }
 
 #dealerContainer .dealer:hover {
@@ -47,7 +49,7 @@ img.soundOn, .soundOff img.soundOff {
 }
 
 #dealerContainer .dealer img {
-    max-width: 100%;
+    width: 200px;
 }
 
 #dealerContainer .dealer .description {
