--- a/css/cards.css
+++ b/css/cards.css
@@ -1,11 +1,9 @@
 .table {
-    padding: 30px;
 }
 
 .card {
-    margin: 20px;
-    width: 100px;
-    height: 100px;
+    /*width: 100px;*/
+    /*height: 100px;*/
     text-align: center;
     display: inline-block;
     position: relative;
@@ -19,26 +17,25 @@
 
 .card img {
     position: absolute;
-    top: -30px;
-    left: -30px;
-    height: 160px;
-    z-index: -1; 
-    
+    /*top: 0px;*/
+    /*left: 0px;*/
+    height: 120%;
+    z-index: -1;
 }
 
 .line1 {
-    font-size: 80px;
-    line-height: 100px;
+    /*font-size: 80%;*/
+    /*line-height: 100%;*/
 }
 
 .line2 {
-    font-size: 40px;
-    line-height: 50px;
+    /*font-size: 40%;*/
+    /*line-height: 50%;*/
 }
 
 .line3 {
-    font-size: 27px;
-    line-height: 33px;
+    /*font-size: 27%;*/
+    /*line-height: 33%;*/
 }
 
 .card .content {
