use white background for better readability

--- a/css/settings.css
+++ b/css/settings.css
@@ -42,6 +42,7 @@ img.soundOn, .soundOff img.soundOff {
     border-radius: 0.5em;
     margin: 0.5em;
     padding: 0.5em;
+    background-color: white;
 }
 
 #dealerContainer .dealer:hover {
