--- a/css/settings.css
+++ b/css/settings.css
@@ -50,7 +50,8 @@ img.soundOn, .soundOff img.soundOff {
 }
 
 #dealerContainer .dealer img {
-    width: 200px;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 #dealerContainer .dealer .description {
