--- a/css/cards.css
+++ b/css/cards.css
@@ -47,7 +47,7 @@
     /* center positioning, see https://stackoverflow.com/a/15328843 */
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    /*transform: translate(-50%, -50%); use JavaScript to restore compatibility to old browsers */
 }
 
 .preload .card .content {
