--- a/css/cards.css
+++ b/css/cards.css
@@ -1,210 +1,216 @@
 .table {
-    text-align: center;
+  text-align: center;
 }
 
 .card {
-    /*width: 100px;*/
-    /*height: 100px;*/
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: saddlebrown;
-    animation-name: hideTheCard;
-    animation-duration: 1s;
-    transform: scaleX(-1);
-    filter: grayscale(50%);
+  /*width: 100px;*/
+  /*height: 100px;*/
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: black;
+  animation-name: hideTheCard;
+  animation-duration: 1s;
+  transform: scaleX(-1);
+  filter: grayscale(50%);
 }
 
 .card img {
-    position: absolute;
-    /*top: 0px;*/
-    /*left: 0px;*/
-    height: 120%;
-    z-index: -1;
+  position: absolute;
+  /*top: 0px;*/
+  /*left: 0px;*/
+  height: 120%;
+  z-index: -1;
 }
 
 .line1 {
-    /*font-size: 80%;*/
-    /*line-height: 100%;*/
+  /*font-size: 80%;*/
+  /*line-height: 100%;*/
 }
 
 .line2 {
-    /*font-size: 40%;*/
-    /*line-height: 50%;*/
+  /*font-size: 40%;*/
+  /*line-height: 50%;*/
 }
 
 .line3 {
-    /*font-size: 27%;*/
-    /*line-height: 33%;*/
+  /*font-size: 27%;*/
+  /*line-height: 33%;*/
 }
 
 .card .content {
-    opacity: 0;  /* content opacity */
-    animation-name: hideTheCardContent;
-    animation-duration: 1s;
-    position: absolute;
-    /* center positioning, see https://stackoverflow.com/a/15328843 */
-    left: 50%;
-    top: 50%;
-    /*transform: translate(-50%, -50%); use JavaScript to restore compatibility to old browsers */
+  opacity: 0; /* content opacity */
+  animation-name: hideTheCardContent;
+  animation-duration: 1s;
+  position: absolute;
+  /* center positioning, see https://stackoverflow.com/a/15328843 */
+  left: 50%;
+  top: 50%;
+  /*transform: translate(-50%, -50%); use JavaScript to restore compatibility to old browsers */
 }
 
 .preload .card .content {
-    animation-duration: 0s;
+  animation-duration: 0s;
 }
 
-.visible .content, .paired .content {
-    opacity: 0.6; /* content opacity */
-    animation-name: showTheCardContent;
-    animation-duration: 1s;
+.visible .content,
+.paired .content {
+  opacity: 0.6; /* content opacity */
+  animation-name: showTheCardContent;
+  animation-duration: 1s;
 }
 
 .backside {
-    animation-name: showOneCardSide;
-    animation-duration: 1s;
+  animation-name: showOneCardSide;
+  animation-duration: 1s;
 }
 
 img.backside {
-    transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
-.visible .backside, .paired .backside {
-    opacity: 0;
-    animation-name: hideOneCardSide;
-    animation-duration: 1s;
+.visible .backside,
+.paired .backside {
+  opacity: 0;
+  animation-name: hideOneCardSide;
+  animation-duration: 1s;
 }
 
 .frontside {
-    opacity: 0;
-    animation-name: hideOneCardSide;
-    animation-duration: 1s;
+  opacity: 0;
+  animation-name: hideOneCardSide;
+  animation-duration: 1s;
 }
 
-.visible .frontside, .paired .frontside {
-    opacity: 1;
-    animation-name: showOneCardSide;
-    animation-duration: 1s;
+.visible .frontside,
+.paired .frontside {
+  opacity: 1;
+  animation-name: showOneCardSide;
+  animation-duration: 1s;
 }
 
 .paired {
-    opacity: 0.8; /* card opacity */
-    color: gray;
+  opacity: 0.8; /* card opacity */
+  color: gray;
 }
 
-.paired, .visible { 
-    animation-name: showTheCard;
-    animation-duration: 1s;
-    filter: grayscale(0%);
-    transform: scaleX(1);
+.paired,
+.visible {
+  animation-name: showTheCard;
+  animation-duration: 1s;
+  filter: grayscale(0%);
+  transform: scaleX(1);
 }
 
 /* turn the card animation
  * see https://www.w3schools.com/css/css3_animations.asp
  */
 @keyframes showTheCard {
-    0% { 
-        transform: scaleX(-1);
-        filter: grayscale(50%);
-    }
-    49% {
-        filter: grayscale(50%);
-    }
-    50% {
-        filter: grayscale(0%);
-        transform: scaleX(0);
-    }
-    100% { 
-        transform: scaleX(1);
-
-    }
+  0% {
+    transform: scaleX(-1);
+    filter: grayscale(50%);
+  }
+  49% {
+    filter: grayscale(50%);
+  }
+  50% {
+    filter: grayscale(0%);
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
 @keyframes hideTheCard {
-    0% { 
-        transform: scaleX(1);
-        filter: grayscale(0%);
-    }
-    49% {
-        filter: grayscale(0%);
-    }
-    50% {
-        transform: scaleX(0);
-        filter: grayscale(50%);
-    }
-    100% { 
-        transform: scaleX(-1);
-    }
+  0% {
+    transform: scaleX(1);
+    filter: grayscale(0%);
+  }
+  49% {
+    filter: grayscale(0%);
+  }
+  50% {
+    transform: scaleX(0);
+    filter: grayscale(50%);
+  }
+  100% {
+    transform: scaleX(-1);
+  }
 }
 
 @keyframes showTheCardContent {
-    0% {
-        opacity: 0;
-    }
-    49% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.6; /* content opacity */
-    }
-    100% {
-        opacity: 0.6; /* content opacity */
-    }
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6; /* content opacity */
+  }
+  100% {
+    opacity: 0.6; /* content opacity */
+  }
 }
 
 @keyframes hideTheCardContent {
-    0% {
-        opacity: 0.6; /* content opacity */
-    }
-    49% {
-        opacity: 0.6; /* content opacity */
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0.6; /* content opacity */
+  }
+  49% {
+    opacity: 0.6; /* content opacity */
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes showOneCardSide {
-    0% {
-        opacity: 0;
-    }
-    49% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes hideOneCardSide {
-    0% {
-        opacity: 1;
-    }
-    49% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 /* Remove selection from elements.
  * see https://stackoverflow.com/a/9314458
  */
-.noselect, .card, .card .content, .card img {
+.noselect,
+.card,
+.card .content,
+.card img {
   -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
